<resources>
    <string name="app_name"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="userID">ID</string>
    <string name="Button">Adımı Göster</string>
    <string name="textView"></string>
    <string name="Success">Success!</string>
    <string name="Change">Change</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="Multiplayer">Multi Player</string>
    <string name="SinglePlayer">Single Player</string>
    <string name="ezDifficulty">Easy (2X2)</string>
    <string name="normDifficulty">Normal (4X4)</string>
    <string name="hardDifficulty">Hard (6X6)</string>
    <string name="start">Start</string>
    <string name="zero">0</string>
</resources>