<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/kaydolbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0B0808"
        android:backgroundTint="#100F0F"
        android:text="@string/SignUp"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/adSoyad"
        app:layout_constraintStart_toStartOf="@+id/adSoyad"
        app:layout_constraintTop_toBottomOf="@+id/idtext"
        app:strokeColor="#911A1A" />

    <Button
        android:id="@+id/passchangebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0B0808"
        android:backgroundTint="#100F0F"
        android:text="@string/Change"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/adSoyad"
        app:layout_constraintStart_toStartOf="@+id/adSoyad"
        app:layout_constraintTop_toBottomOf="@+id/idtext"
        app:strokeColor="#911A1A" />

    <EditText
        android:id="@+id/kaydolpass"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passchangeusername"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <EditText
        android:id="@+id/passchange"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        android:autofillHints="" />

    <EditText
        android:id="@+id/idtext"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/userID"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passchangeid"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/userID"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        android:autofillHints="" />

    <EditText
        android:id="@+id/adSoyad2"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        android:autofillHints="" />

    <EditText
        android:id="@+id/adSoyad"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        android:autofillHints="" />

    <EditText
        android:id="@+id/sifre"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adSoyad"
        android:autofillHints="" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#0B0808"
        android:backgroundTint="#100F0F"
        android:text="@string/Login"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/adSoyad"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="@+id/adSoyad"
        app:layout_constraintTop_toBottomOf="@+id/sifre"
        app:strokeColor="#911A1A" />

    <TextView
        android:id="@+id/kaydoltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:text="@string/SignUp"
        android:textColor="#311B92"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sifre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sifre"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/sifretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="@string/Forgot"
        android:textColor="#311B92"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kaydoltext" />

</androidx.constraintlayout.widget.ConstraintLayout>