<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="52dp"
            android:contentDescription="@string/Button"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton9"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Button"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/imageButton7"
            app:layout_constraintTop_toTopOf="@+id/imageButton10"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/Button"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/Button"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/imageButton9"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <TextView
            android:id="@+id/player1score"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="76dp"
            android:text="@string/zero"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/player2score"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginStart="256dp"
            android:layout_marginTop="76dp"
            android:text="@string/zero"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="168dp"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>