<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Multiplayer2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SinglePlayer2">

        <ImageButton
            android:id="@+id/imageButton100"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintEnd_toEndOf="@+id/imageButton22"
            app:layout_constraintTop_toTopOf="@+id/imageButton25"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton99"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintEnd_toEndOf="@+id/imageButton23"
            app:layout_constraintTop_toTopOf="@+id/imageButton100"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton98"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton17"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="208dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton98"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
            app:layout_constraintEnd_toStartOf="@+id/imageButton16"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="44dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton15"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintStart_toStartOf="@+id/imageButton98"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton18"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton17"
            app:layout_constraintStart_toStartOf="@+id/imageButton6"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton18"
            app:layout_constraintEnd_toEndOf="@+id/imageButton15"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton20"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/Button"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton19"
            app:layout_constraintEnd_toEndOf="@+id/imageButton16"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintStart_toStartOf="@+id/imageButton17"
            app:layout_constraintTop_toBottomOf="@+id/imageButton24"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton21"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintStart_toStartOf="@+id/imageButton18"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton22"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintEnd_toEndOf="@+id/imageButton19"
            app:layout_constraintTop_toTopOf="@+id/imageButton21"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton23"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintEnd_toEndOf="@+id/imageButton20"
            app:layout_constraintTop_toTopOf="@+id/imageButton22"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton24"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/Button"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <ImageButton
            android:id="@+id/imageButton25"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/Button"
            app:layout_constraintStart_toStartOf="@+id/imageButton21"
            app:layout_constraintTop_toTopOf="@+id/imageButton24"
            app:srcCompat="@mipmap/ic_hog_foreground" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="156dp"
            android:layout_height="75dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="132dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="156dp"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/zero"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="156dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/zero"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="108dp"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>